src/test/ui/issues/issue-6458-2.rs
fn main() {
    // Unconstrained type:
    format!("{:?}", None);
    //~^ ERROR type annotations needed [E0282]
}
